--- a/settings.yml
+++ b/settings.yml
@@ -67,7 +67,7 @@ columns_button:
   description:
     en: Enter the text for the title of the button in the composer.
 columns_text:
-  default: "Use the closing tag to mark where the column ends."
+  default: "Use the closing tag to mark where the column ends. Once done. Columns must be equal height."
   description:
     en: Enter the placeholder text that appears in the composer after the user clicks the button.
 
